# DigimonEvoTool

./: CMakeLists.txt  README.md  digimon.lisp  digimonevotool.c
assets/: digimonboxes.txt
cmake/: FindSDL2.cmake
